# exerciese

./: .var1.c.swp  CMakeLists.txt  README.md  test.c
script/: build_run.sh  build_source.sh
src/main/cpp/: Change.c  Else.c  Enum.c  For.c  Found.c  HelloWorld.c  If.c  Stuct.c
